[package]
name = "bevy_disturbulence"
version = "0.1.0"
edition = "2021"
authors = ["mvlabat <mvlabat@gmail.com"]
description = "Networking plugin for the Bevy game engine"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mvlabat/bevy_disturbulence"
repository = "https://github.com/mvlabat/bevy_disturbulence"
keywords = ["bevy", "gamedev", "networking", "webrtc"]
categories = [
    "game-development",
    "network-programming",
    "wasm",
    "web-programming",
]

[features]
default = []
client = ["naia-client-socket"]
server = ["naia-server-socket"]

[dependencies]
bevy = { version = "0.10", default-features = false }
turbulence = "0.4"
naia-client-socket = { version = "0.20", optional = true }
naia-server-socket = { version = "0.20", optional = true }
naia-socket-shared = "0.20"
bytes = "1.2"
futures-lite = "1.12"
crossbeam-channel = "0.5"
instant = "0.1"
futures = "0.3"
wasm-timer = "0.2.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
naia-client-socket = { version = "0.20", optional = true, features = ["wbindgen"] }
naia-socket-shared = { version = "0.20", features = ["wbindgen"] }

[dev-dependencies]
clap = "3.2"
bevy = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8" }
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "=0.2.84"

[[example]]
name = "channels"
path = "examples/channels.rs"
required-features = ["bevy/default"]

[patch.crates-io]
#naia-client-socket = { path = "../naia/socket/client" }
#naia-server-socket = { path = "../naia/socket/server" }
#naia-socket-shared = { path = "../naia/socket/shared" }
#webrtc-unreliable-client = { path = "../webrtc-unreliable-client-0.1.3" }
